--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <a-marker-camera preset="custom"
            type="pattern"
-           url="https://Josh-Elliott.github.io/qr-marker-test/patterns_AR/pattern-bird silhouette.patt">
+           url="https://Josh-Elliott.github.io/qr-marker-test/patterns_AR/pattern-qr-code-marker-test.patt">
         </a-marker-camera>
      </a-scene>
      
