--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
      <a-scene embedded arjs="sourcetype: webcam:">
         
-       <a-entity obj-model="obj:url(./globe/new_globe.obj); mtl:url(./globe/new_globe.mtl)" position='0 0.9 0'>
+       <a-entity obj-model="obj:url(./globe assets/new_globe.obj); mtl:url(./globe assets/new_globe.mtl)" position='0 0.9 0'>
 
                <a-animation attribute="rotation"
                              dur="5000"
